--- a/src/components/pages/Layout.module.css
+++ b/src/components/pages/Layout.module.css
@@ -6,7 +6,7 @@
 .ul{
     display: flex;
     list-style-type: none;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     height: 50px;
 }
