--- a/src/components/pages/Login.module.css
+++ b/src/components/pages/Login.module.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     background-image: linear-gradient(145deg, #6cc6fa 10%, #fc46f6 );
 }
-form{
+.form{
     width: 500px;
     height: 500px;
     background-color: white;
