--- a/src/components/pages/SignUp.module.css
+++ b/src/components/pages/SignUp.module.css
@@ -17,14 +17,14 @@
     box-shadow: 4px 5px 4px 0px #5e5e5e;
     border-radius: 20px;
 }
-.login{
+.signup{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 500px;
 }
-.login h1{
+.signup h1{
     width: 500px;
     text-align: center;
     margin-top: 70px;
@@ -32,13 +32,13 @@
     color:  #6e0169;
 }
 .input{
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
-    gap: 10px;
+    gap: 5px;
     flex-direction: column;
 }
 .inputUsername, .inputPassword{
-    height: 40px;
+    height: 35px;
     margin: 10px 0 10px 0;
     width: 300px;
     padding: 10px;
